Updated configuration for ELC 2019 YPDD
Updated to work with warrior, with some improvements and convenience
tweaks:
- Set PREFERRED_PROVIDER_virtual/kernel in schooner.conf to replace
  use of containerx86-64 machine definition
- host-app-container-lighttpd recipe added to package app container
  for host use
- container-host-image-multiconfig replaced with container-host-image
  derived from core-image-minimal
- added marina distribution configuration to define systemd based
  distribution

Signed-off-by: Scott Murray <scott.murray@konsulko.com>

--- a/conf/distro/schooner.conf
+++ b/conf/distro/schooner.conf
@@ -19,3 +19,5 @@ VIRTUAL-RUNTIME_login_manager ?= ""
 VIRTUAL-RUNTIME_init_manager ?= ""
 VIRTUAL-RUNTIME_initscripts ?= ""
 VIRTUAL-RUNTIME_keymaps ?= ""
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-dummy"
