--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-container-demo = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-container-demo = "6"
 
 LAYERDEPENDS_meta-container-demo = "core"
-LAYERSERIES_COMPAT_meta-container-demo = "thud"
+LAYERSERIES_COMPAT_meta-container-demo = "warrior"
